--- a/spring-ai-alibaba-integration-example/backend/src/main/resources/application-dev.yml
+++ b/spring-ai-alibaba-integration-example/backend/src/main/resources/application-dev.yml
@@ -21,7 +21,7 @@ spring:
       api-key: ${AI_DASHSCOPE_API_KEY}
 
   datasource:
-    url: jdbc:sqlite:src/main/resources/db/user.db
+    url: jdbc:sqlite:spring-ai-alibaba-integration-example\backend\src\main\resources\db\user.db
     driver-class-name: org.sqlite.JDBC
 
   jpa:
