--- a/spring-ai-alibaba-rag-example/rag-milvus-example/pom.xml
+++ b/spring-ai-alibaba-rag-example/rag-milvus-example/pom.xml
@@ -58,7 +58,12 @@
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-milvus-store-spring-boot-starter</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.34</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
