jar 缺少和user.db 缺少 以及版本更新引起的程序错误

--- a/spring-ai-alibaba-chat-memory-example/pom.xml
+++ b/spring-ai-alibaba-chat-memory-example/pom.xml
@@ -56,13 +56,13 @@
 		<dependency>
 			<groupId>com.alibaba.cloud.ai</groupId>
 			<artifactId>spring-ai-alibaba-mysql-memory</artifactId>
-			<version>${spring-ai-alibaba.version}</version>
+			<version>1.0.0-M6.2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.alibaba.cloud.ai</groupId>
 			<artifactId>spring-ai-alibaba-redis-memory</artifactId>
-			<version>${spring-ai-alibaba.version}</version>
+			<version>1.0.0-M6.2-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
