--- a/spring-ai-alibaba-mcp-example/manul-example/filesystem/pom.xml
+++ b/spring-ai-alibaba-mcp-example/manul-example/filesystem/pom.xml
@@ -50,7 +50,22 @@
 			<artifactId>spring-ai-mcp</artifactId>
 			<version>0.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.12.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp-sse</artifactId>
+			<version>4.12.0</version>
+		</dependency>
 
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>logging-interceptor</artifactId>
+			<version>4.12.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
