--- a/spring-ai-alibaba-mcp-example/starter-example/server/starter-webflux-server/src/main/resources/application.yml
+++ b/spring-ai-alibaba-mcp-example/starter-example/server/starter-webflux-server/src/main/resources/application.yml
@@ -18,6 +18,13 @@
 
 # NOTE: You must disable the banner and the console logging 
 # to allow the STDIO transport to work !!!
+server:
+  port: 8080
+  servlet:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
 spring:
   main:
     banner-mode: off
